--- a/website-test/index.html
+++ b/website-test/index.html
@@ -52,9 +52,6 @@
                         <a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing elit Aenean commodo ligula eget.</a>
                     </li>
                     <li>
-                        <a href="#">
-                            This informational text widget - Buy this theme now !
-                        </a>
                     </li>
                     <li>
                         <a href="#">
@@ -130,7 +127,7 @@
                                 </ul>
                         </li>
                   <li>
-                            <a href="about.html">
+                            <a id="about" href="about.html">
                                 about                            </a>                        </li>
                   <li>
                             <a href="features.html">
