--- a/website-test/contact.html
+++ b/website-test/contact.html
@@ -250,7 +250,7 @@
 ================================================== -->
 
 <div class="row">
-      <form id="form" name="form" method="post" action="mail/contact.php">
+      <form id="form" name="form" >
        <div class="span4">
         <label>First name</label>
         <input type="text" class="span4 req-string" placeholder="Type something…" name="fname" id="fname">
